language/move-lang/tests/move_check/parser/struct_type_extra_comma.exp
error: 

   ┌── tests/move_check/parser/struct_type_extra_comma.move:2:14 ───
   │
 2 │     struct S<,T> { }
   │              ^ Expected a type parameter
   │

