language/move-lang/tests/move_check/parser/struct_type_extra_comma.move
module M {
    struct S<,T> { } // Test a comma before the first type parameter
}
